<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">
    
    <TextView
        android:id="@+id/tvInput"
        android:layout_width="match_parent"
        android:layout_height="250sp"
        android:background="@color/black"
        android:padding="10dp"
        android:textSize="48sp"
        android:textColor="@color/white"
        android:gravity="end|bottom"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/backGroundColor"
        android:layout_weight="1"
        >
        <Button
            android:id="@+id/btn7"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:textColor="@color/white"
            android:text="@string/_7"
            android:textSize="15sp"
            android:onClick="onDigit"
            android:backgroundTint="@color/black"
            tools:ignore="NestedWeights,UsingOnClickInXml" />
        <Button
            android:layout_marginBottom="0dp"
            android:id="@+id/btn8"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:textColor="@color/white"
            android:text="@string/_8"
            android:textSize="15sp"
            android:onClick="onDigit"
            android:backgroundTint="@color/black"
            tools:ignore="UsingOnClickInXml" />

        <Button
            android:id="@+id/btn9"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:textColor="@color/white"
            android:text="@string/_9"
            android:textSize="15sp"
            android:onClick="onDigit"
            android:backgroundTint="@color/black"
            tools:ignore="UsingOnClickInXml" />

        <Button
            android:id="@+id/btndivide"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:textColor="@color/white"
            android:text="@string/_back"
            android:textSize="15sp"
            android:onClick="onOperator"
            android:backgroundTint="@color/black"
            tools:ignore="UsingOnClickInXml" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/backGroundColor"
        android:layout_weight="1"
        >
        <Button
            android:id="@+id/btn4"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:textColor="@color/white"
            android:text="@string/_4"
            android:textSize="15sp"
            android:onClick="onDigit"
            android:backgroundTint="@color/black"
            tools:ignore="NestedWeights,UsingOnClickInXml" />
        <Button
            android:id="@+id/btn5"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:textColor="@color/white"
            android:text="@string/_5"
            android:textSize="15sp"
            android:onClick="onDigit"
            android:backgroundTint="@color/black"
            tools:ignore="UsingOnClickInXml" />

        <Button
            android:id="@+id/btn6"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:textColor="@color/white"
            android:text="@string/_6"
            android:textSize="15sp"
            android:onClick="onDigit"
            android:backgroundTint="@color/black"
            tools:ignore="UsingOnClickInXml" />

        <Button
            android:id="@+id/btnAdd"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:textColor="@color/white"
            android:text="@string/add"
            android:textSize="15sp"
            android:onClick="onOperator"
            android:backgroundTint="@color/black"
            tools:ignore="UsingOnClickInXml" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/backGroundColor"
        android:layout_weight="1"
        >
        <Button
            android:id="@+id/btn1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:textColor="@color/white"
            android:text="@string/_1"
            android:textSize="15sp"
            android:onClick="onDigit"
            android:backgroundTint="@color/black"
            tools:ignore="NestedWeights,UsingOnClickInXml" />
        <Button
            android:id="@+id/btn2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:textColor="@color/white"
            android:text="@string/_2"
            android:textSize="15sp"
            android:onClick="onDigit"
            android:backgroundTint="@color/black"
            tools:ignore="UsingOnClickInXml" />

        <Button
            android:id="@+id/btn3"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:textColor="@color/white"
            android:text="@string/_3"
            android:textSize="15sp"
            android:onClick="onDigit"
            android:backgroundTint="@color/black"
            tools:ignore="UsingOnClickInXml" />

        <Button
            android:id="@+id/btnSubstract"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:textColor="@color/white"
            android:text="@string/subs"
            android:textSize="15sp"
            android:onClick="onOperator"
            android:backgroundTint="@color/black"
            tools:ignore="UsingOnClickInXml" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/backGroundColor"
        android:layout_weight="1"
        >
        <Button
            android:id="@+id/btndot"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:textColor="@color/white"
            android:text="."
            android:textSize="15sp"
            android:onClick="onDecimalPoint"
            android:backgroundTint="@color/black"
            tools:ignore="NestedWeights,UsingOnClickInXml" />

        <Button
            android:id="@+id/btn0"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:textColor="@color/white"
            android:text="@string/_0"
            android:textSize="15sp"
            android:onClick="onDigit"
            android:backgroundTint="@color/black"
            tools:ignore="NestedWeights,UsingOnClickInXml" />


        <Button
            android:id="@+id/btnClr"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:textColor="@color/white"
            android:text="@string/clr"
            android:textSize="15sp"
            android:onClick="onClear"
            android:backgroundTint="@color/black"
            tools:ignore="UsingOnClickInXml" />

        <Button
            android:id="@+id/btnMultiply"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:textColor="@color/white"
            android:text="@string/multipl"
            android:textSize="15sp"
            android:onClick="onOperator"
            android:backgroundTint="@color/black"
            tools:ignore="UsingOnClickInXml" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/backGroundColor"
        android:layout_weight="1"
        >


        <Button
            android:id="@+id/btnEqual"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:textColor="@color/white"
            android:text="@string/equal"
            android:textSize="15sp"
            android:onClick="onEqual"
            android:backgroundTint="@color/black"
            tools:ignore="NestedWeights,UsingOnClickInXml" />

    </LinearLayout>



    

</LinearLayout>